--- a/internal/httpapi/templates/dashboard.tmpl
+++ b/internal/httpapi/templates/dashboard.tmpl
@@ -200,11 +200,7 @@
         </div>
       </div>
     </div>
-    <footer id="{{.FooterElementID}}" class="{{.FooterBaseClass}}">
-      <div id="{{.FooterInnerElementID}}" class="container d-flex justify-content-end text-end small">
-        <span>{{.FooterBrandPrefix}} <a class="text-decoration-none" href="{{.FooterBrandURL}}" target="_blank" rel="noopener noreferrer">{{.FooterBrandName}}</a></span>
-      </div>
-    </footer>
+    {{.FooterHTML}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script type="application/json" id="{{.ClientConfigElementID}}">{{.ClientConfigJSON}}</script>
     <script>
