--- a/internal/httpapi/templates/landing.tmpl
+++ b/internal/httpapi/templates/landing.tmpl
@@ -183,11 +183,7 @@
         </div>
       </section>
     </main>
-    <footer class="landing-footer border-top mt-auto py-4">
-      <div class="container text-center">
-        Built by <a class="text-decoration-none" href="https://mprlab.com" target="_blank" rel="noopener noreferrer">Marco Polo Research Lab</a>
-      </div>
-    </footer>
+    {{.FooterHTML}}
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
       (function() {
