--- a/internal/httpapi/templates/landing.tmpl
+++ b/internal/httpapi/templates/landing.tmpl
@@ -144,8 +144,7 @@
                 </li>
               </ul>
               <div class="d-flex flex-column flex-sm-row gap-3 mt-4">
-                <a class="btn btn-primary btn-lg" href="/auth/google">Continue with Google</a>
-                <a class="btn btn-outline-secondary btn-lg" href="/app">View dashboard</a>
+                <a class="btn btn-primary btn-lg" href="/auth/google">Login</a>
               </div>
             </div>
             <div class="col-lg-6">
